[package]
name = "parquet_viewer"
version = "0.1.0"
edition = "2021"
authors = ["ParquetViewer Contributors"]
description = "A Rust-based Parquet inspector with a GPUI front-end"
license = "MIT"

[dependencies]
arrow = "53.0.0"
parquet = "53.0.0"
clap = { version = "4.5", features = ["derive"] }
gpui = { version = "0.1.2", default-features = true }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[package.metadata.bundle]
identifier = "com.example.parquet-viewer"
